<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.conversations.list.ConversationListActivity">

    <include layout="@layout/toolbar_actionbar_with_headerbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/conversations_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        tools:listitem="@layout/list_item_conversation" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/conversations_start_new_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_create_chat"
        android:tint="@android:color/white"
        app:layout_anchor="@+id/conversations_list"
        app:layout_anchorGravity="bottom|right|end" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/conversations_progress"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
